# documentParser

./: .env.example  .gitignore  README.md  install.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: build_offline_bundle.py  dp_bench_smoke.py  render_heading_boxes.py  render_layout_boxes.py  upload_offline_bundle.sh  verify_onnx_layout_backend.py
src/document_parser/: __init__.py  cli.py
src/document_parser/api/: __init__.py  deps.py  main.py
src/document_parser/api/routes/: chunk.py  ingest.py  parse.py
src/document_parser/chunking/: __init__.py  engine.py  graph.py  state.py
src/document_parser/chunking/nodes/: __init__.py  finalize.py  split.py
src/document_parser/chunking/strategies/: __init__.py  recursive.py
src/document_parser/core/: __init__.py  exceptions.py  models.py
src/document_parser/parsing/: __init__.py  engine.py  graph.py  state.py  weights.py
src/document_parser/parsing/clients/: __init__.py  azure_document_intelligence.py  vlm.py
src/document_parser/parsing/loaders/: __init__.py  html_loader.py  image.py  json_loader.py  office.py  pdf.py  text.py  vlm_caption.py
src/document_parser/parsing/loaders/pdf/: __init__.py  azure_di.py  coords.py  graph.py  heading_llm.py  layout.py  native.py  vlm.py
src/document_parser/parsing/nodes/: __init__.py  assemble.py  detect.py  extract.py
src/document_parser/pipeline/: __init__.py  ingest.py
tests/: test_api.py  test_azure_di_client.py  test_chunking.py  test_cli.py  test_contract.py  test_heading_llm.py  test_html_loader.py  test_image_loader.py  test_json_loader.py  test_layout.py  test_office_loader.py  test_parsing.py  test_pdf_loader.py  test_pipeline.py  test_vlm_client.py  test_weights.py
