[project]
name = "document-parser"
version = "0.1.0"
description = "A document parsing toolkit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.4",
    "pydantic>=2.7",
]

[project.optional-dependencies]
pdf = ["pymupdf>=1.24"]
api = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
]

[project.scripts]
document-parser = "document_parser.cli:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "httpx>=0.27",
    "import-linter>=2.0",
]

[tool.importlinter]
root_package = "document_parser"

[[tool.importlinter.contracts]]
name = "parsing and chunking engines are independent"
type = "independence"
modules = ["document_parser.parsing", "document_parser.chunking"]

[[tool.importlinter.contracts]]
name = "layered architecture"
type = "layers"
layers = [
    "document_parser.api | document_parser.cli",
    "document_parser.pipeline",
    "document_parser.parsing | document_parser.chunking",
    "document_parser.core",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
