[project]
name = "document-parser"
version = "0.1.0"
description = "A document parsing toolkit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.4",
    "pydantic>=2.7",
]

[project.optional-dependencies]
pdf = ["pymupdf>=1.24"]
# NOTE: 'layout' does not fully install PP-DocLayoutV2 -- paddlepaddle itself is
# not on this list because it isn't published to a normal PyPI index. Install
# it separately from PaddlePaddle's own index (supply-chain review pending,
# deferred for now per team decision):
#   pip install paddlepaddle==3.3.1 -i https://www.paddlepaddle.org.cn/packages/stable/cpu/
# Without it, layout.analyze_page() falls back to a pymupdf-only heuristic.
layout = [
    "huggingface_hub>=0.26",
    "onnxruntime>=1.19",
    "paddleocr[doc-parser]>=3.4.0,<3.5.0",
]
api = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
]
azure = [
    "azure-ai-documentintelligence>=1.0.0",
]
vlm = [
    "openai>=1.0",
]

[project.scripts]
document-parser = "document_parser.cli:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "httpx>=0.27",
    "import-linter>=2.0",
]

[tool.importlinter]
root_package = "document_parser"

[[tool.importlinter.contracts]]
name = "parsing and chunking engines are independent"
type = "independence"
modules = ["document_parser.parsing", "document_parser.chunking"]

[[tool.importlinter.contracts]]
name = "layered architecture"
type = "layers"
layers = [
    "document_parser.api | document_parser.cli",
    "document_parser.pipeline",
    "document_parser.parsing | document_parser.chunking",
    "document_parser.core",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
